--- a/manifest.json
+++ b/manifest.json
@@ -5413,6 +5413,17 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "home/techguides/images/selenium-dashboard-example.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/selenium-dashboard-example.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "home/techguides/images/selenium-drivers.png",
       "output": {
         "resource": {
@@ -6575,7 +6586,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/selenium-template.html",
-          "hash": "J98xfugjGoEpitJSXbwuKQ=="
+          "hash": "Hcu8TXp2cZrGsZJBRwxWaQ=="
         }
       },
       "is_incremental": false,
