--- a/manifest.json
+++ b/manifest.json
@@ -540,6 +540,17 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "home/images/repo.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/images/repo.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "home/images/sandbox-templates.png",
       "output": {
         "resource": {
@@ -555,6 +566,50 @@
       "output": {
         "resource": {
           "relative_path": "home/images/see-user-role.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/images/sql-creds-windows.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/images/sql-creds-windows.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/images/sql-db.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/images/sql-db.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/images/sqldb-folder-structure.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/images/sqldb-folder-structure.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/images/sqldb-zip.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/images/sqldb-zip.png"
         }
       },
       "is_incremental": false,
@@ -7231,14 +7286,14 @@
         "incrementalPhase": "build"
       },
       "processors": {
-        "ResourceDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
-          "incrementalPhase": "build"
-        },
         "TocDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build"
+        },
+        "ResourceDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
         "RestApiDocumentProcessor": {
