--- a/manifest.json
+++ b/manifest.json
@@ -3915,6 +3915,28 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "home/techguides/images/idler-session-timeout.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/idler-session-timeout.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/idler-timer.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/idler-timer.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "home/techguides/images/import-core-models.png",
       "output": {
         "resource": {
@@ -4850,6 +4872,17 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "home/techguides/images/org-env-id.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/org-env-id.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "home/techguides/images/organisation-id.png",
       "output": {
         "resource": {
@@ -5635,6 +5668,28 @@
       "output": {
         "resource": {
           "relative_path": "home/techguides/images/server-properties.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/sftp-artifactory-url.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/sftp-artifactory-url.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/sftp-change-password.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/sftp-change-password.png"
         }
       },
       "is_incremental": false,
@@ -7330,19 +7385,14 @@
         "incrementalPhase": "build"
       },
       "processors": {
-        "TocDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
-          "incrementalPhase": "build"
-        },
-        "ResourceDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
-          "incrementalPhase": "build"
-        },
         "RestApiDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor RestApiDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build"
+        },
+        "TocDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
         "ConceptualDocumentProcessor": {
@@ -7351,6 +7401,11 @@
         },
         "ManagedReferenceDocumentProcessor": {
           "can_incremental": false,
+          "incrementalPhase": "build"
+        },
+        "ResourceDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         }
       }
