--- a/manifest.json
+++ b/manifest.json
@@ -1153,7 +1153,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/deploy-an-update-to-an-existing-environment.html",
-          "hash": "uQK3j8KUbQsiNTe3f2dRWA=="
+          "hash": "bjMdxkbkh0DZOahdhUeARA=="
         }
       },
       "is_incremental": false,
@@ -1195,7 +1195,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/export-import-database.html",
-          "hash": "QDf3hKY4T+i5sZlupy2eDA=="
+          "hash": "WkvBA6ivuc6zsuCBDwUXOg=="
         }
       },
       "is_incremental": false,
@@ -5840,6 +5840,17 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "home/techguides/images/sqlback-up.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/sqlback-up.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "home/techguides/images/sqldb-folder-structure.png",
       "output": {
         "resource": {
@@ -7385,14 +7396,14 @@
         "incrementalPhase": "build"
       },
       "processors": {
-        "RestApiDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor RestApiDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
-          "incrementalPhase": "build"
-        },
         "TocDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build"
+        },
+        "RestApiDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor RestApiDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
         "ConceptualDocumentProcessor": {
